--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -21,12 +21,12 @@ alert = #bd2c40
 [bar/example]
 
 modules-left = i3
-modules-center = xbacklight volume 
+modules-center =
 modules-right = filesystem cpu memory temperature wlan eth battery date
 
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height =20
+height = 16
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 1.0
@@ -47,29 +47,14 @@ padding-right = 0
 module-margin-left = 0
 module-margin-right = 5
 
-#font-0 = fixed:pixelsize=10;1
-#font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-#font-2 = siji:pixelsize=10;1
-
-font-0 = Ubuntu:pixelsize=12;2
-font-1 = fontawesome:pixelsize=12;2
+font-0 = Ubuntu:pixelsize=11;2
+font-1 = fontawesome:pixelsize=11;2
 font-2 = dejavusans:pixelsize=13;2
 
-;tray-position = right
-tray-padding = 2
+tray-position = right
+tray-padding = 3
 ;tray-transparent = true
 ;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 [module/xwindow]
 type = internal/xwindow
@@ -90,7 +75,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted =    %{F-}: %percentage_used%%
+label-mounted =    %{F-}: %free%
 label-unmounted = %mountpoint% not mounted
 
 [module/bspwm]
@@ -200,7 +185,7 @@ type = internal/network
 interface = wlp3s0
 interval = 1.0
 
-format-connected = <ramp-signal> <label-connected>  
+format-connected = <ramp-signal> <label-connected>
 label-connected = %essid%   %downspeed%    %upspeed%
 accumulate-stats = false
 #format-disconnected = 
