--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -198,7 +198,7 @@ interface = wlp3s0
 interval = 1.0
 
 format-connected = <ramp-signal> <label-connected>
-label-connected = %essid%   %downspeed%    %upspeed%
+label-connected = %essid% %local_ip%   %downspeed%    %upspeed%
 accumulate-stats = false
 #format-disconnected = 
 format-disconnected = <label-disconnected>
