--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -194,7 +194,7 @@ label = %mb_used%
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlan0
 interval = 1.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -215,7 +215,7 @@ ramp-signal-5 = 😈
 
 [module/eth]
 type = internal/network
-interface = enp0s3
+interface = eth0
 interval = 1.0
 
 format-connected-underline = #55aa55
