--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -37,6 +37,9 @@ modules-center =
 modules-right = filesystem cpu memory temperature wlan eth battery date
 
 monitor = LVDS1
+; empty means just take the first one you find
+monitor-fallback =
+monitor-strict = true
 width = 100%
 height = 16
 ;offset-x = 1%
