--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -21,12 +21,14 @@ alert = #bd2c40
 [bar/VGA]
 inherit = bar/example
 monitor = VGA1
+monitor-fallback =
 ; deactivate tray
 tray-position =
 
 [bar/HDMI]
 inherit = bar/example
 monitor = HDMI1
+monitor-fallback =
 ; deactivate tray
 tray-position =
 
@@ -38,8 +40,7 @@ modules-right = filesystem cpu memory temperature wlan eth battery date
 
 monitor = LVDS1
 ; empty means just take the first one you find
-monitor-fallback =
-monitor-strict = true
+monitor-fallback = HDMI-1
 width = 100%
 height = 16
 ;offset-x = 1%
